# genovisio_reporting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conda_example.yaml  pyproject.toml  release-please-config.json
.github/workflows/: main.yml  release-please.yml
genovisio_report/: main.py
genovisio_report/src/: core.py  enums.py  exceptions.py  input_utils.py  report.py
genovisio_report/src/input_schemas/: __init__.py  hybrid.py  isv.py  marcnv.py
genovisio_report/src/reports/: __init__.py  cnv_info.py  genes.py  marcnv.py  prediction_plot.py  score.py  shap_plot.py
genovisio_report/styles/: main.css
genovisio_report/templates/: index.html
genovisio_report/templates/partials/: acmg.html  autoclassification.html  cnv_info.html  genes.html  prediction_summary.html
tests/: expected.csv  expected.html  expected_output_gain.csv  expected_output_gain.html  expected_output_loss.csv  expected_output_loss.html  expected_output_loss_csv.csv  hybrid.json  isv.json  isv_gain.json  isv_loss.json  marcnv.json  test_csv.py
