[tool.poetry]
name = "genovisio_report"
version = "0.5.0"
description = "Genovisio PDF/HTML reports generator"
authors = ["Matej Hrnciar <matej.hrnciar@geneton.sk>", "Jozef Sitarcik <jozef.sitarcik@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
jinja2 = ">=3.1"
pydantic = ">=2.9"
plotly = ">=5.24"
annotation = {git = "https://github.com/geneton-ltd/genovisio_annotation.git", tag= "v0.3.1"}

[tool.poetry.scripts]
genovisio-report = "genovisio_report.main:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pre-commit = ">=4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
